tests/should_fail/bug/1975.stderr
error: Forbidden constructor of opaque type `Zero`
 --> 1975.rs:8:5
  |
8 |     Zero
  |     ^^^^
  |
  = help: Only `#[trusted]` program functions can see through opaque types

error: Forbidden constructor of opaque type `Zero`
  --> 1975.rs:13:9
   |
13 |         Zero => {}
   |         ^^^^
   |
   = help: Only `#[trusted]` program functions can see through opaque types

error: Forbidden constructor of opaque type `Zero`
  --> 1975.rs:19:5
   |
19 |     Zero
   |     ^^^^
   |
   = help: Only `#[trusted]` program functions can see through opaque types

error: Forbidden field access of opaque type `One`
  --> 1975.rs:26:5
   |
26 |     _x.0
   |     ^^^^
   |
   = help: Only `#[trusted]` program functions can see through opaque types

error: Forbidden field access of opaque type `One`
  --> 1975.rs:33:5
   |
33 |     _x.0
   |     ^^^^
   |
   = help: Only `#[trusted]` program functions can see through opaque types

error: aborting due to 5 previous errors

